--- a/octavia/amphorae/drivers/logging/jinja/templates/filebeat_base.template
+++ b/octavia/amphorae/drivers/logging/jinja/templates/filebeat_base.template
@@ -8,11 +8,13 @@ filebeat.inputs:
 
 filebeat.config.modules:
   path: ${path.config}/modules.d/*.yml
-  reload.enabled: true
+  reload.enabled: false
 
 setup.template.settings:
   index.number_of_shards: 3
 
+setup.kibana:
+  host: "10.10.10.15:5601"
 
 output.logstash:
   hosts: [ "10.10.10.10:5044"]
